// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIPill /> renders the pill with the specified value prop 1`] = `
<div
  className="xui-pill xui-pill-layout xui-pill-maxwidth"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <span
      className="xui-pill--text"
    >
      Value Pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render a target when passed in 1`] = `
<div
  className="xui-pill xui-pill-layout xui-pill-maxwidth xui-pill-interactive"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <a
    aria-disabled={undefined}
    className="xui-button xui-pill--content xui-pill--button"
    data-automationid={undefined}
    disabled={false}
    href="http://xero.com"
    onClick={[Function]}
    onKeyDown={undefined}
    onKeyPress={[Function]}
    rel={undefined}
    role={undefined}
    tabIndex={0}
    target="_blank"
    title={undefined}
  />
</div>
`;

exports[`<XUIPill /> should render a title when passed 1`] = `
<div
  className="xui-pill xui-pill-layout xui-pill-maxwidth"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  />
</div>
`;

exports[`<XUIPill /> should render an automation id when a qaHook is passed in 1`] = `
<div
  className="xui-pill xui-pill-layout xui-pill-maxwidth"
  data-automationid="pill-test"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid="pill-test--inner"
  />
</div>
`;

exports[`<XUIPill /> should render an error icon when invalid 1`] = `
<div
  className="xui-pill xui-pill-layout xui-pill-maxwidth xui-pill-is-invalid"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <div
      className="xui-pill--erroricon"
    >
      <svg
        className="xui-icon xui-icon-color-red xui-icon-inline"
        data-automationid={undefined}
        focusable="false"
        height={10.666666666666666}
        viewBox="0 0 2 8"
        width={2.6666666666666665}
      >
        <path
          d="M0,0 L2,0 L2,5 L0,5 L0,0 Z M0,6 L2,6 L2,8 L0,8 L0,6 Z"
          role="presentation"
        />
      </svg>
    </div>
    <span
      className="xui-pill--text"
    >
      Error pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render an error icon when invalid even with an avatar 1`] = `
<div
  className="xui-pill xui-pill-layout xui-pill-maxwidth xui-pill-is-invalid"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <div
      className="xui-pill--erroricon"
    >
      <svg
        className="xui-icon xui-icon-color-red xui-icon-inline"
        data-automationid={undefined}
        focusable="false"
        height={10.666666666666666}
        viewBox="0 0 2 8"
        width={2.6666666666666665}
      >
        <path
          d="M0,0 L2,0 L2,5 L0,5 L0,0 Z M0,6 L2,6 L2,8 L0,8 L0,6 Z"
          role="presentation"
        />
      </svg>
    </div>
    <span
      className="xui-pill--text"
    >
      A
    </span>
  </span>
</div>
`;
